2007-09-14  Zeeshan Ali  <zeenix@gstreamer.net>

	* src/pixmaps/Makefile.am:
	* src/pixmaps/upnp-state-variables.png:
	* src/universal-cp-icons.c:
	* src/universal-cp-icons.h:

	Use 'GTK_STOCK_DIRECTORY' for the the parent node of the
	state-variables.

2007-09-14  Zeeshan Ali  <zeenix@gstreamer.net>

	* src/universal-cp-eventtreeview.c:

	Strip newlines from value of the variable in events before displaying
	them and don't display the complete value if it's too big. User can
	get the complete value if she copy the event to the clipboard.

2007-09-14  Zeeshan Ali  <zeenix@gstreamer.net>

	* src/universal-cp-actiondialog.c:

	Shrink the action dialog each time after removing the argument widgets.

2007-09-13  Zeeshan Ali  <zeenix@gstreamer.net>

	* src/universal-cp-eventtreeview.c:
        
	Don't let the event treeview scroll-down.

2007-09-13  Zeeshan Ali  <zeenix@gstreamer.net>

	* src/pixmaps/upnp-service.png:
	* src/pixmaps/upnp-state-variable.png:

	Icons update from Lapo Calamandrei.

2007-09-13  Zeeshan Ali  <zeenix@gstreamer.net>

	* src/universal-cp-actiondialog.c:

	Only update an out argument textview if there is any text to put there.

2007-09-12  Zeeshan Ali  <zeenix@gstreamer.net>

	* src/pixmaps/Makefile.am:
	* src/pixmaps/upnp-action.png:
	* src/pixmaps/upnp-network.png:

	Remove unneeded icons.

2007-09-12  Zeeshan Ali  <zeenix@gstreamer.net>

	* src/universal-cp-icons.c:
	* src/universal-cp-icons.h:

	- Get the action icon from the gtk stock as well
	- Clean-up the code for loading pixbuf from gtk stock icons.

2007-09-12  Zeeshan Ali  <zeenix@gstreamer.net>

	* src/universal-cp-icons.c:
	* src/universal-cp-icons.h:

	- Get the network icon from the gtk stock
	- Put the code for loading pixbuf from stock into a separate function.

2007-09-12  Zeeshan Ali  <zeenix@gstreamer.net>

	* src/pixmaps/upnp-device.png:

	Icon update from Lapo Calamandrei.

2007-09-12  Zeeshan Ali  <zeenix@gstreamer.net>

	* src/universal-cp-devicetreeview.c: