@@ -31,7 +31,8 @@ typedef enum
         ICON_DEVICE,
         ICON_SERVICE,
         ICON_VARIABLE,
-        ICON_ACTION_ARG,
+        ICON_ACTION_ARG_IN,
+        ICON_ACTION_ARG_OUT,
         ICON_MISSING,
         ICON_NETWORK,
         ICON_ACTION,
